# V25MAT102

./: .gitignore  flake.nix  hello.py  pyproject.toml
notebooks/: GEMINI_API_KEY  test.ipynb  uke3.ipynb
notebooks/kladd/: PlottFunksjoner.ipynb
notebooks/oblig1/: innlevering1.ipynb
notebooks/oblig2/: Untitled.ipynb  innlevering2.ipynb
notebooks/oblig3/: Lagrange.ipynb  gradienteuler.ipynb  kari_analyse.ipynb  ola_analyse.ipynb  oslobergen.ipynb
notebooks/uke10/: 121funksjoneravnvariable.ipynb  126kurver.ipynb  12andrederiverttesten.ipynb  12deriverte_a.ipynb  12derivertevektorfunksjoner.ipynb  Jacobi_og_Hesse.ipynb  OppgaverUke10.ipynb  Uke10Oppgaver.ipynb  Untitled.ipynb  lagrange_metoden.ipynb  lineærRegresjon.ipynb
notebooks/uke11/: kjerneregelen.ipynb
notebooks/uke12/: hypotesetest.ipynb  paretetemperaturer.ipynb  test_stigning_gjennomsnitt.ipynb  testhelding.ipynb  to_utvalgs_t_test.ipynb  to_utvalgs_tosidig_t_test.ipynb  åtlig_to_utvalgs_t_test.ipynb
notebooks/uke3/: K1_grunnleggende_python.ipynb  K2_Newtons_metode.ipynb  K2_Newtons_metode2.ipynb  K2_Newtons_metode_svar.ipynb  k1_1.json  k2_1.json  uke3.ipynb
notebooks/uke4/: Integraler.ipynb  Integrasjon.ipynb  Untitled.ipynb  numerisk_devirasjon.ipynb  o3.json  uke4_oppgaver.ipynb  uke4_oppgaver_med_svar.ipynb  uke5.ipynb
notebooks/uke5/: numerisk_devirasjon.ipynb  uke5_oppgaver.ipynb  uke5_oppgaver_svar.ipynb
notebooks/uke6/: Differensialligninger-Copy1.ipynb  Differensialligninger.ipynb  Differensialligningert.ipynb  systemer.json  (+2 more)
tex/: .envrc
texts/: snipper.tex  svar.md  uke3.txt
(+41 files in other folders)
