[project]
name = "V25MAT102"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "sympy>=1.13.3",
]

[dependency-groups]
dev = [
    "v25mat102",
]

[tool.uv.sources]
v25mat102 = { workspace = true }
